fixed listings buttons alignment

--- a/server/public/sass/bulma/sass/elements/form.sass
+++ b/server/public/sass/bulma/sass/elements/form.sass
@@ -260,6 +260,7 @@ input
   &.is-horizontal
     +tablet
       display: flex
+      justify-content: flex-end
       & > .control
         display: flex
         flex-grow: 5
