--- a/server/public/sass/bulma/sass/elements/notification.sass
+++ b/server/public/sass/bulma/sass/elements/notification.sass
@@ -1,7 +1,7 @@
 .notification
   @extend .block
   +clearfix
-  background-color: $background
+  background-color: $border
   border-radius: $radius
   padding: 16px 20px
   position: relative
